syntax = "proto3";

package messagemanager;

option go_package = "godemo/message_manager/proto";

message BaseRequest {
  string request_id = 1;
  string trace_id = 2;
  string source_service = 3;
  string target_service = 4;
}

// 請求資料結構
message RequestData {
  BaseRequest base_request = 1;
  string payload = 2;  // 改為 string 類型，更容易處理
}
